@@ -4,6 +4,8 @@
   not available. Closes bug #151 (Unpaper detection is not handled correctly).
 * Fixed display of tesseract error messages, broken by commit
   "Gscan2pdf::Tesseract: support output to stdout instead of temporary file"
+* Make RTL test work for other versions of ImageMagick.
+  Closes bug #246 (t/​357_unpaper_rtl.t test fails).
 
 
 1.8.0 (12.04.2017):
